# rust-nestorwheelock

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
nginx/: nginx.conf
src/: db.rs  error.rs  main.rs  privacy.rs
src/handlers/: contact.rs  feed.rs  mod.rs  pages.rs  posts.rs  search.rs
src/models/: category.rs  contact.rs  media.rs  mod.rs  page.rs  post.rs  profile.rs  tag.rs
templates/: base.html  contact.html  detail.html  feed.html  page.html  search.html
templates/partials/: feed_items.html  sidebar.html
